# relic

./: .gitignore  .relic_ignore  Cargo.toml  ipsum  temp.toml
.bones/: upstream  upstream copy
.relic/: info.json  now.diff  tracked  upstream
.relic/pending/: 1747147985.diff  1747147992.diff  1747148048.diff  1747148243.diff  1747148317.diff  1747196074.diff  1747274062.diff  1747655579.diff  1747655709.diff  1747655711.diff  1747655722.diff  1747655748.diff  1747655749.diff  1747655780121048000.diff  1747656068141371000.diff  1747656105903116000.diff  1747656133844320000.diff  1747656369094540000.diff  1747656540521285000.diff  1747656662421148000.diff  1747656668748821000.diff  1747656757971736000.diff  1747656861694605000.diff  1747656893453528000.diff  1747656895518840000.diff  1747656926333587000.diff  1747657428397390000.diff  1747657448835280000.diff  1747657511502656000.diff  1747657596889580000.diff  1747658045177963000.diff  1747658085730557000.diff  1747658087288268000.diff  1747658153734666000.diff  1747658179897068000.diff  1747658224942891000.diff  1747658283192669000.diff  1747658312441987000.diff  1747658327626935000.diff  1747658380094822000.diff  (+98 more)
lorem/: .relic_ignore  earth  earth copy  mars  pluto
lorem/.relic/: info.json  tracked  upstream
lorem/ipsum/: saturn_new  temp
planets/: blehhh
src/: bones.rs  branch.rs  change.rs  cli.rs  commit.rs  content.rs  content_set.rs  error.rs  ignore.rs  lib.rs  main.rs  models.rs  relic.rs  relic_info.rs  stash.rs  state.rs  utils.rs
src/commands/: add.rs  branch.rs  cherry.rs  clone.rs  commit.rs  (+15 more)
(+60 files in other folders)
