[package]
name = "relic-vcs"
version = "0.1.0"
edition = "2021"
exclude = [
    "lorem/",
    "ipsum",
    ".relic",
    ".relic_ignore",
    "target/"
]
license = "MIT"
keywords = ["vcs"]
categories = ["command-line-interface", "filesystem"]
description = "Git, but in Rust."
homepage = "https://github.com/ian-hon/relic"
repository = "https://github.com/ian-hon/relic"
readme = false

[dependencies]
sha2 = "0.10.9"

strum = "0.26.3"
strum_macros = "0.26.3"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
unescape = "0.1.0"
chrono = "0.4.41"

dotenv = "0.15.0"
clap = "4.5.38"

similar = "2.7.0"
# diff = "0.1.13"